load("//tools/lint:lint.bzl", "add_lint_tests")
load(
    "//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
)

package(default_visibility = ["//visibility:private"])

filegroup(
    name = "filament_configurations",
    srcs = glob(["filament_configurations/**"]),
    visibility = ["//:__pkg__"],
)

drake_cc_library(
    name = "filament_common",
    srcs = ["filament_common.cc"],
    hdrs = ["filament_common.h"],
    data = [
        ":filament_configurations",
    ],
    deps = [
        "//common:find_resource",
        "//geometry:shape_specification",
    ],
)

drake_cc_binary(
    name = "cantilever_beam",
    srcs = ["cantilever_beam.cc"],
    add_test_rule = 1,
    test_rule_args = [
        "-simulation_time=0.1",
        "-realtime_rate=0.0",
    ],
    deps = [
        "//geometry:drake_visualizer",
        "//geometry:scene_graph",
        "//multibody/plant",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "cantilever_ring",
    srcs = ["cantilever_ring.cc"],
    add_test_rule = 1,
    test_rule_args = [
        "-simulation_time=0.1",
        "-realtime_rate=0.0",
    ],
    deps = [
        "//geometry:drake_visualizer",
        "//geometry:scene_graph",
        "//multibody/plant",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "buckling_beam",
    srcs = ["buckling_beam.cc"],
    add_test_rule = 1,
    test_rule_args = [
        "-simulation_time=0.1",
        "-realtime_rate=0.0",
    ],
    deps = [
        "//geometry:drake_visualizer",
        "//geometry:scene_graph",
        "//multibody/plant",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "filament_hydroelastic_contact",
    srcs = ["filament_hydroelastic_contact.cc"],
    deps = [
        ":filament_common",
        "//geometry",
        "//geometry/proximity",
    ],
)

drake_cc_binary(
    name = "flexible_shaft",
    srcs = ["flexible_shaft.cc"],
    add_test_rule = 1,
    test_rule_args = [
        "-simulation_time=0.1",
        "-realtime_rate=0.0",
    ],
    deps = [
        "//geometry:drake_visualizer",
        "//geometry:scene_graph",
        "//multibody/plant",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "//systems/primitives",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "hanging_filament",
    srcs = ["hanging_filament.cc"],
    add_test_rule = 1,
    test_rule_args = [
        "-simulation_time=0.1",
        "-realtime_rate=0.0",
    ],
    deps = [
        "//geometry:drake_visualizer",
        "//geometry:scene_graph",
        "//multibody/plant",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "knot",
    srcs = ["knot.cc"],
    add_test_rule = 1,
    test_rule_args = [
        "-simulation_time=0.001",
    ],
    deps = [
        ":filament_common",
        "//geometry:drake_visualizer",
        "//geometry:scene_graph",
        "//multibody/plant",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "simply_supported_beam",
    srcs = ["simply_supported_beam.cc"],
    add_test_rule = 1,
    test_rule_args = [
        "-simulation_time=0.1",
        "-realtime_rate=0.0",
    ],
    deps = [
        "//geometry:drake_visualizer",
        "//geometry:scene_graph",
        "//multibody/plant",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "@gflags",
    ],
)

add_lint_tests()
