load("//tools/jupyter:jupyter_py.bzl", "drake_jupyter_py_binary")
load("//tools/lint:lint.bzl", "add_lint_tests")
load(
    "//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
)

package(default_visibility = ["//visibility:private"])

drake_cc_binary(
    name = "actuated_curvature",
    srcs = ["actuated_curvature.cc"],
    add_test_rule = 1,
    test_rule_args = [
        "-simulation_time=0.1",
        "-realtime_rate=0.0",
    ],
    deps = [
        "//geometry:drake_visualizer",
        "//geometry:scene_graph",
        "//multibody/plant",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "buckling_beam",
    srcs = ["buckling_beam.cc"],
    add_test_rule = 1,
    test_rule_args = [
        "-simulation_time=0.1",
        "-realtime_rate=0.0",
    ],
    deps = [
        "//geometry:drake_visualizer",
        "//geometry:scene_graph",
        "//multibody/plant",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "cantilever_beam",
    srcs = ["cantilever_beam.cc"],
    add_test_rule = 1,
    test_rule_args = [
        "-simulation_time=0.1",
        "-realtime_rate=0.0",
    ],
    deps = [
        "//geometry:drake_visualizer",
        "//geometry:scene_graph",
        "//multibody/plant",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "cantilever_ring",
    srcs = ["cantilever_ring.cc"],
    add_test_rule = 1,
    test_rule_args = [
        "-simulation_time=0.1",
        "-realtime_rate=0.0",
    ],
    deps = [
        "//geometry:drake_visualizer",
        "//geometry:scene_graph",
        "//multibody/plant",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "@gflags",
    ],
)

drake_jupyter_py_binary(
    name = "capstan_effect",
    add_test_rule = 0,
    deps = [
        "//bindings/pydrake",
    ],
)

drake_jupyter_py_binary(
    name = "conveyor_belt",
    add_test_rule = 0,
    deps = [
        "//bindings/pydrake",
    ],
)

drake_jupyter_py_binary(
    name = "crowned_pulley_DER",
    add_test_rule = 0,
    deps = [
        "//bindings/pydrake",
    ],
)

drake_jupyter_py_binary(
    name = "crowned_pulley_FEM",
    add_test_rule = 0,
    deps = [
        "//bindings/pydrake",
    ],
)

drake_jupyter_py_binary(
    name = "entangling_filament_gripper",
    add_test_rule = 0,
    data = [
        "@drake_models//:franka_description",
    ],
    deps = [
        "//bindings/pydrake",
    ],
)

drake_cc_binary(
    name = "filament_hydroelastic_vs_point_contact",
    srcs = ["filament_hydroelastic_vs_point_contact.cc"],
    deps = [
        "//geometry",
        "//geometry/proximity",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "flexible_shaft",
    srcs = ["flexible_shaft.cc"],
    add_test_rule = 1,
    test_rule_args = [
        "-simulation_time=0.1",
        "-realtime_rate=0.0",
    ],
    deps = [
        "//geometry:drake_visualizer",
        "//geometry:scene_graph",
        "//multibody/plant",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "//systems/primitives",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "hanging_filament",
    srcs = ["hanging_filament.cc"],
    add_test_rule = 1,
    test_rule_args = [
        "-simulation_time=0.1",
        "-realtime_rate=0.0",
    ],
    deps = [
        "//geometry:drake_visualizer",
        "//geometry:scene_graph",
        "//multibody/plant",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "@gflags",
    ],
)

drake_jupyter_py_binary(
    name = "knot_tightening_capsule",
    add_test_rule = 0,
    deps = [
        "//bindings/pydrake",
    ],
)

drake_jupyter_py_binary(
    name = "knot_tightening_DER",
    add_test_rule = 0,
    deps = [
        "//bindings/pydrake",
    ],
)

drake_jupyter_py_binary(
    name = "knot_tightening_IMC",
    add_test_rule = 0,
    deps = [
        "//bindings/pydrake",
    ],
)

drake_cc_binary(
    name = "simply_supported_beam",
    srcs = ["simply_supported_beam.cc"],
    add_test_rule = 1,
    test_rule_args = [
        "-simulation_time=0.1",
        "-realtime_rate=0.0",
    ],
    deps = [
        "//geometry:drake_visualizer",
        "//geometry:scene_graph",
        "//multibody/plant",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "slack_rope",
    srcs = ["slack_rope.cc"],
    add_test_rule = 1,
    test_rule_args = [
        "-simulation_time=0.1",
        "-realtime_rate=0.0",
    ],
    deps = [
        "//geometry:drake_visualizer",
        "//geometry:scene_graph",
        "//multibody/plant",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "//systems/primitives",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "twisting_shaft",
    srcs = ["twisting_shaft.cc"],
    add_test_rule = 1,
    test_rule_args = [
        "-simulation_time=0.1",
        "-realtime_rate=0.0",
    ],
    deps = [
        "//geometry:drake_visualizer",
        "//geometry:scene_graph",
        "//multibody/plant",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "//systems/primitives",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "undeformed_curvature",
    srcs = ["undeformed_curvature.cc"],
    add_test_rule = 1,
    test_rule_args = [
        "-simulation_time=0.1",
        "-realtime_rate=0.0",
    ],
    deps = [
        "//geometry:drake_visualizer",
        "//geometry:scene_graph",
        "//multibody/plant",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "@gflags",
    ],
)

add_lint_tests()
